layout issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,8 @@
 
 .header__theme-menu {
   display: flex;
-  grid-column: span 2;
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
   justify-content: center;
 }
 
@@ -56,7 +57,6 @@
   display: flex;
   gap: 10px;
   list-style: none;
-  /* justify-content: center; */
 }
 
 .header__theme-menu-button {
@@ -96,9 +96,8 @@
 }
 
 .heading {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 2;
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
   margin-inline-start: -20px;
   color: var(--heading-color, #FFC2E6);
   font-weight: bold;
@@ -109,10 +108,11 @@
 }
 
 .header__text-block {
-  grid-column-start: 2;
-  grid-row-start: 3;
+  grid-column: 2;
+  grid-row: 3 / 4;
   align-self: center;
-  inline-size: 100%;
+  justify-self: end;
+  inline-size: clamp(22.75rem, -1.0625rem + 49.6094vw, 30.6875rem);
 }
 
 .title-decor {
@@ -271,14 +271,13 @@
   .what-block {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
   }
 }
 
 @media (width < 768px) {
 
   .header {
-    grid-template-columns: 1fr;
     padding: 10px;
     min-block-size: 41.75rem;
   }
@@ -296,6 +295,11 @@
   .heading {
     margin-inline-start: 0;
     font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
+
+  .header__text-block {
+    grid-column: 1 / 3;
+    inline-size: clamp(22.1875rem, 21.6508rem + 2.2901vw, 22.75rem);
   }
 
   .content {
